sfdx-project/force-app/main/default/objects/Score_Snapshot__c/Score_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Immutable daily snapshot of scoring for a Target Company. Never update — always insert a new record.</description>
    <label>Score Snapshot</label>
    <nameField>
        <displayFormat>SCR-{0000}</displayFormat>
        <label>Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>