sfdx-project/force-app/main/default/objects/Score_Snapshot__c/fields/Overall_Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Priority_Score__c</fullName>
    <label>Overall Priority Score</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>