sfdx-project/force-app/main/default/objects/Score_Snapshot__c/fields/Phase_I_Readiness_Score__c.field-meta.xml
<CustomField>
    <fullName>Phase_I_Readiness_Score__c</fullName>
    <label>Phase I Readiness Score</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>