sfdx-project/force-app/main/default/objects/Score_Snapshot__c/fields/Priority_Band__c.field-meta.xml
<CustomField>
    <fullName>Priority_Band__c</fullName>
    <label>Priority Band</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Hot</fullName><default>false</default><label>Hot</label></value>
            <value><fullName>Warm</fullName><default>false</default><label>Warm</label></value>
            <value><fullName>Watch</fullName><default>false</default><label>Watch</label></value>
            <value><fullName>Cold</fullName><default>false</default><label>Cold</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>