sfdx-project/force-app/main/default/objects/Score_Snapshot__c/fields/Reasoning_JSON__c.field-meta.xml
<CustomField>
    <fullName>Reasoning_JSON__c</fullName>
    <label>Reasoning JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>