sfdx-project/force-app/main/default/objects/Score_Snapshot__c/fields/Signals_Counted__c.field-meta.xml
<CustomField>
    <fullName>Signals_Counted__c</fullName>
    <label>Signals Counted</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>